Disaster-Recovery/blueservice.yaml

apiVersion: v1
kind: Service
metadata:
  name: blue-service
spec:
  selector:
    environment: blue
  ports:
  - name: http
    port: 80
    targetPort: 80
