Disaster-Recovery/green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-service
spec:
  selector:
    environment: green
  ports:
  - name: http
    port: 80
    targetPort: 80
